[DevTools] Do not reset page scale to 1.0, rely on setNeedsReset.

Testing this would be nice, but the only idea I can come up with is
to call resetScaleStateImmediately() and check the page scale,
which is no good.

BUG=603877

Review URL: https://codereview.chromium.org/1885043011

Cr-Commit-Position: refs/heads/master@{#387741}

Former-commit-id: 12ded61087cbef96393f56a6c01c8efcb386e4ef